[gd_scene load_steps=6 format=2]

[ext_resource path="res://PlayingBoard.gd" type="Script" id=1]
[ext_resource path="res://assets/bench.png" type="Texture" id=2]
[ext_resource path="res://Misc/BenchSpot.gd" type="Script" id=3]
[ext_resource path="res://Misc/CoinLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/HeartLabel.tscn" type="PackedScene" id=5]

[node name="PlayingBoard" type="Node2D" groups=[
"playingBoard",
]]
script = ExtResource( 1 )

[node name="Bench" type="TextureRect" parent="."]
margin_left = 160.0
margin_top = 488.0
margin_right = 480.0
margin_bottom = 520.0
rect_scale = Vector2( 2.6, 2.2 )
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineupPoint" type="Position2D" parent="."]
position = Vector2( 512, 352 )

[node name="ExpPoints" type="Label" parent="."]
margin_left = 16.0
margin_top = 496.0
margin_right = 56.0
margin_bottom = 510.0
text = "Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Income" type="Label" parent="."]
margin_left = 16.0
margin_top = 520.0
margin_right = 64.0
margin_bottom = 534.0
text = "income"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tip" type="Label" parent="."]
margin_left = 488.0
margin_top = 272.0
margin_right = 536.0
margin_bottom = 286.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p0" type="Node2D" parent="."]
position = Vector2( 204, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p1" type="Node2D" parent="."]
position = Vector2( 284, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p2" type="Node2D" parent="."]
position = Vector2( 368, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p3" type="Node2D" parent="."]
position = Vector2( 452, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p4" type="Node2D" parent="."]
position = Vector2( 536, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p5" type="Node2D" parent="."]
position = Vector2( 620, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p6" type="Node2D" parent="."]
position = Vector2( 704, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p7" type="Node2D" parent="."]
position = Vector2( 784, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p8" type="Node2D" parent="."]
position = Vector2( 868, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="p9" type="Node2D" parent="."]
position = Vector2( 952, 520 )
scale = Vector2( 2.2, 2.2 )
script = ExtResource( 3 )

[node name="CoinLabel" parent="." instance=ExtResource( 4 )]
margin_left = 48.0
margin_top = 460.0
margin_right = 48.0
margin_bottom = 460.0

[node name="HeartLabel" parent="." instance=ExtResource( 5 )]
margin_left = 48.0
margin_top = 564.0
margin_right = 48.0
margin_bottom = 564.0
